# 4-Player-Chess

./: .gitignore  README.md  create-tables.py  does-env-exist.py  dump.rdb  pyproject.toml
.cursor/: environment.json
docs/: TODO.md  next_steps.md  system_prompt.md
scripts/: setup-databases.ps1  test-services.ps1
src/: database.py  main.py
src/chess/: __init__.py
src/chess/models/: game.py
src/chess/routers/: game.py  websocket.py
src/chess/services/: game_engine.py  game_state.py  websocket_manager.py
static/css/: components.css  game.css
static/js/: board.js  pieces.js  theme-toggle.js
templates/: about.html  base.html  create.html  game.html  index.html  lobby.html
